--- a/style.html
+++ b/style.html
@@ -2034,7 +2034,7 @@
         .print-armario-large {
             font-size: 9.5rem;
             font-weight: 900;
-            letter-spacing: 0.12em;
+            letter-spacing: 0rem;
             color: #fff;
             text-align: left;
             line-height: 1.05;
