--- a/style.html
+++ b/style.html
@@ -2126,11 +2126,18 @@
         }
         #print-area {
             position: fixed;
-            left: -9999px;
-            top: -9999px;
+            inset: 0;
             pointer-events: none;
-            display: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 16px;
             visibility: hidden;
+            opacity: 0;
+            z-index: -1;
+        }
+        #print-area.print-area-visible {
+            visibility: visible;
         }
         #print-area .print-ticket {
             box-shadow: none;
@@ -2139,16 +2146,20 @@
         @media (max-width: 640px) {
             .modal.modal-print {
                 padding: 12px 8px;
+                overflow-y: auto;
+                align-items: flex-start;
             }
             .modal-print .modal-content {
                 width: 100%;
                 max-width: 100%;
                 min-width: 0;
                 padding: 14px 10px;
-                max-height: 96vh;
+                height: auto;
+                max-height: none;
             }
             .modal-print-wrapper {
                 padding: 8px 10px 14px;
+                max-height: none;
             }
             .print-ticket {
                 width: 100%;
@@ -2189,13 +2200,15 @@
                 font-size: 0.95rem;
             }
             .print-actions {
-                flex-wrap: wrap;
+                flex-direction: column;
+                align-items: stretch;
                 gap: 10px;
             }
             .print-actions .btn {
-                flex: 1 1 180px;
+                width: 100%;
                 min-width: 0;
                 padding: 12px 14px;
+                font-size: 1rem;
             }
         }
         @media print {
