--- a/style.html
+++ b/style.html
@@ -1849,7 +1849,7 @@
             justify-content: center;
             border-radius: 18px;
             padding: 18px;
-            overflow-x: hidden;
+            overflow-x: auto;
             max-height: 94vh;
             -webkit-overflow-scrolling: touch;
         }
